feat(sqlite): add fine-grained permission configuration for tools
Add support for restricting SQLite tools to specific databases and tables
with separate read/write permissions. This enables tighter security controls
when exposing database tools to agents.

- Add SqliteConfig with builder pattern for configuring permissions
- Support AllowList/DenyList modes for table-level read/write access
- Add SQL parser using sqlparser crate to extract table operations
- Create ConfiguredXxxTool wrappers that enforce permissions
- Add factory functions: tools_for_database(), read_only_tools_for_tables()
- Validate empty deny lists at build() time with Result-based error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ aws-smithy-runtime-api = { version = "1.7", features = ["client", "http-1x"] }
 
 # Database
 rusqlite = { version = "0", features = ["bundled"] }
+sqlparser = "0"
 
 # Utilities
 base64 = "0.22"
