--- a/mixtape-tools/Cargo.toml
+++ b/mixtape-tools/Cargo.toml
@@ -18,7 +18,7 @@ edit = []
 search = []
 fetch = []
 aws = []
-sqlite = ["dep:rusqlite", "dep:base64", "dep:sha2", "dep:hex"]
+sqlite = ["dep:rusqlite", "dep:base64", "dep:sha2", "dep:hex", "dep:sqlparser"]
 
 [dependencies]
 mixtape-core.workspace = true
@@ -65,6 +65,7 @@ rusqlite = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
 sha2 = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
+sqlparser = { workspace = true, optional = true }
 
 [target.'cfg(unix)'.dependencies]
 nix.workspace = true
