feat: add tool search support for deferred tool loading
Add Anthropic's Tool Search feature for dynamically discovering tools
from large catalogs (30+ tools) instead of loading all definitions upfront.

SDK layer:
- Add AdvancedToolUse beta feature
- Add ToolSearchType (Regex/Bm25), ToolSearchTool configuration
- Add Tool.defer_loading field
- Add ToolSearchToolResult content block and related types
- Add ServerToolUseUsage for usage tracking
- Update streaming to handle tool search results

Core layer:
- Add ServerToolUse, ToolSearchResult content block variants
- Add ToolDefinition.defer_loading field
- Add ToolSearchType enum (provider-agnostic)
- Update Anthropic/Bedrock conversions

Agent builder:
- Add add_deferred_tool(), add_deferred_tools() methods
- Add with_tool_search_type() method
- Auto-enable tool search when deferred tools are present

Bedrock provider:
- Add with_tool_search() method for beta flag

--- a/mixtape-core/Cargo.toml
+++ b/mixtape-core/Cargo.toml
@@ -133,3 +133,7 @@ required-features = ["anthropic"]
 [[example]]
 name = "permissions"
 required-features = ["bedrock"]
+
+[[example]]
+name = "tool_search"
+required-features = ["bedrock"]
